too manay changes I don't even remember

--- a/public/admin/adminprofile.html
+++ b/public/admin/adminprofile.html
@@ -1313,7 +1313,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<li><a class="tooltips" href="../admin/adminprofile.html"><span>Profile</span><i class="lnr lnr-user"></i></a></li>
 										<li><a class="tooltips" href="../admin/adminprofile.html"><span>Settings</span><i class="lnr lnr-cog"></i></a></li>
 										<div ng-controller="logoutController">
-												<li><a class="tooltips" ng-click='logout()' href="../login"><span>Log out</span><i class="lnr lnr-power-switch"></i></a></li>												
+												<li><a class="tooltips" ng-click='logout()'><span>Log out</span><i class="lnr lnr-power-switch"></i></a></li>												
 										</div>
 										</ul>
 									</div>
@@ -1329,11 +1329,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											
 										  </ul>
 										</li>
-										 <li id="menu-academico" ><a href="#"><i class="fa fa-file-text-o"></i> <span>Ui Elements</span> <span class="fa fa-angle-right" style="float: right"></span></a>
+										 <li id="menu-academico" ><a href="#"><i class="fa fa-file-text-o"></i> <span>Edit Posts</span> <span class="fa fa-angle-right" style="float: right"></span></a>
 											 <ul id="menu-academico-sub" >
 												<li id="menu-academico-avaliacoes" ><a href="../admin/forms.html">Forms</a></li>
 												<li id="menu-academico-boletim" ><a href="../admin/validation.html">Validation Forms</a></li>
-												<li id="menu-academico-boletim" ><a href="../admin/table.html">Tables</a></li>
+												<li id="menu-academico-boletim" ><a href="#!/table">Articles</a></li>
 												<li id="menu-academico-boletim" ><a href="../admin/buttons.html">Buttons</a></li>
 											  </ul>
 										 </li>
