--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <script src="./controllersJS/main.js"></script>
   <script src="./controllersJS/controllerTaniguchi.js"></script>
   <script src="./controllersJS/services.js"></script>
+  <script src="./controllersJS/articleServices.js"></script>
 
 </body>
 </html>
