angular fixed in back interface

--- a/public/admin/table.html
+++ b/public/admin/table.html
@@ -296,9 +296,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 													<tbody> 
 														<tr>
 															<td></td>
-															<td><input class="form-control" ng-model="article.title"></td>
-															<td><input class="form-control" ng-model="article.content"></td>
-															<td><input class="form-control" ng-model="article.url"></td>
+															<td><input class="form-control" ng-model="article.title" disabled></td>
+															<td><input class="form-control" ng-model="article.content" disabled></td>
+															<td><input class="form-control" ng-model="article.url" disabled></td>
 															<td></td>
 															<td><button class="btn btn-primary" ng-click=
 																"redirectToForm()">+ Create New</button></td>
