--- a/public/admin/forms.html
+++ b/public/admin/forms.html
@@ -284,11 +284,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 																				<h3 class="inner-tittle two">Taniguchi Metal Plate Article Form  </h3>
 																					<div class="grid-1">
 																							<div class="form-body" ng-controller="ArticleDetailController">
-																									<form class="form-horizontal">
-																										<div class="form-group">
+																									<form class="form-horizontal" name="articleForm">
+																										<div class="form-group" ng-class="{ 'has-error' : articleForm.title.$invalid">
 																											<label for="focusedinput" class="col-sm-2 control-label">Title </label>
 																											<div class="col-sm-8">
-																												<input type="text" class="form-control1" ng-model="article.title" placeholder="Article title">
+																												<input type="text" name="title" class="form-control1" ng-model="article.title" placeholder="Article title">
+																												<p ng-show="articleForm.title.$invalid" class="help-block">title is required.</p>
 																											</div>
 																										</div>																										
 																										
