-Fixed: angular errors

--- a/public/admin/404.html
+++ b/public/admin/404.html
@@ -14,18 +14,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta name="keywords" content="Augment Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
- <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
+ 
 <!-- Custom CSS -->
-<link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href="../admin/css/style.css" rel='stylesheet' type='text/css' />
 <!-- Graph CSS -->
-<link href="css/font-awesome.css" rel="stylesheet"> 
+<link href="../admin/css/font-awesome.css" rel="stylesheet"> 
 <!-- jQuery -->
-<link href='//fonts.googleapis.com/css?family=Roboto:700,500,300,100italic,100,400' rel='stylesheet' type='text/css'>
-<!-- lined-icons -->
 <link rel="stylesheet" href="css/icon-font.min.css" type='text/css' />
-<!-- //lined-icons -->
-<script src="js/jquery-1.10.2.min.js"></script>
 <!--clock init-->
 </head> 
 <body>
@@ -37,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 															<span>Whoops! Page not found</span>
 															<p>The page your are looking for has escaped from our servers.</p>
 															<div class="error-btn">
-															<a class="read fourth" href="index.html">Return to Home</a>
+															<a class="read fourth" href="#!/adminprofile">Return to Home</a>
 															</div>
 														</div>
 
@@ -50,9 +45,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<!--footer section end-->
 									<!--/404-->
 <!--js -->
-<script src="js/jquery.nicescroll.js"></script>
-<script src="js/scripts.js"></script>
-<!-- Bootstrap Core JavaScript -->
-   <script src="js/bootstrap.min.js"></script>
+<script src="../admin/js/jquery.nicescroll.js"></script>
+<script src="../admin/js/scripts.js"></script>
+
 </body>
 </html>
