added main taniguchi

--- a/public/admin/profile.html
+++ b/public/admin/profile.html
@@ -436,9 +436,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											
 										  </ul>
 										</li>
-										 <li id="menu-academico" ><a><i class="fa fa-file-text-o"></i> <span>Edit Posts</span> <span class="fa fa-angle-right" style="float: right"></span></a>
+										 <li id="menu-academico" ><a><i class="fa fa-file-text-o"></i> <span>記事を編集</span> <span class="fa fa-angle-right" style="float: right"></span></a>
 											 <ul id="menu-academico-sub" >
-												<li id="menu-academico-boletim" ><a href="#!/table">Articles</a></li>
+												<li id="menu-academico-boletim" ><a href="#!/table">記事</a></li>
 												</ul>
 										 </li>
 									<li><a href="typography.html"><i class="lnr lnr-pencil"></i> <span>Typography</span></a></li>
