gs menu started

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <script src="./controllersJS/controllerTaniguchi.js"></script>
   <script src="./controllersJS/services.js"></script>
   <script src="./controllersJS/articleServices.js"></script>
-
+  <script src="./scripts/w3.js"></script>
+  
 </body>
 </html>
