add icons responsive,  add functionality

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
   <script src="./controllersJS/services.js"></script>
   <script src="./controllersJS/articleServices.js"></script>
   <script src="./controllersJS/actionServices.js"></script>
+  <script src="./controllersJS/smoothScrollService.js"></script>
 
 
 </body>
