added majore fixes, include gs news

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,14 @@
 
   <script src="./controllersJS/main.js"></script>
   <script src="./controllersJS/controllerTaniguchi.js"></script>
+  <script src="./controllersJS/controllerArticles.js"></script>
+  <script src="./controllersJS/controllerGs.js"></script>
+  <script src="./controllersJS/controllerNews.js"></script>
+  <script src="./controllersJS/sessionController.js"></script>
   <script src="./controllersJS/services.js"></script>
   <script src="./controllersJS/articleServices.js"></script>
   <script src="./controllersJS/actionServices.js"></script>
+  <script src="./controllersJS/newsServices.js"></script>
   <script src="./controllersJS/smoothScrollService.js"></script>
 
 </body>
